# frmarketsol

./: .gitignore  README.md
contracts/: Cargo.toml  new_program_keypair.json
contracts/src/: lib.rs
frontend/: README.md  bun.lockb  components.json  package.json  tailwind.config.js  tsconfig.json
frontend/contexts/: TransitionContextProvider.jsx  WalletContextProvider.jsx
frontend/interfaces/: tokens.ts
frontend/models/serialize/: StudentIntro.ts  StudentIntroReference.ts
frontend/pages/: _app.tsx  index.jsx
frontend/projects/: projects.ts
frontend/public/favicons/: manifest.json
frontend/src/app/: page.tsx
frontend/src/components/: Navbar.jsx
frontend/src/components/ui/: dialog.tsx  input.tsx  label.tsx  radio-group.tsx
frontend/styles/: globals.css
market_contract/: Anchor.toml
market_contract/programs/market_contract/: Cargo.toml
market_contract/programs/market_contract/src/: lib.rs  verify.rs
market_contract/tests/: market_contract.ts
