[package]
name = "frmarket-contract"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "1.5.1"
borsh-derive = "1.5.1"
solana-program = "=1.18.11"

[dev-dependencies]
solana-sdk = "1.18.11"

[lib]
crate-type = ["cdylib", "lib"]
